# yovi_en1c

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  index.html  master  package-lock.json  package.json  sonar-project.properties
.github/workflows/: build.yml  release-deploy.yml
docs/: README.md  index.adoc
docs/images/: QualityTree.svg.html
docs/src/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_context_and_scope.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  06_runtime_view.adoc  07_deployment_view.adoc  08_concepts.adoc  09_architecture_decisions.adoc  10_quality_requirements.adoc  11_technical_risks.adoc  12_glossary.adoc
gamey/: Cargo.toml
gamey/game_gateway/: game_gateway_client.rs
gamey/src/: gamey_error.rs  lib.rs
gamey/src/bot/: heuristic.rs  mod.rs  ybot.rs
gamey/src/bot_server/: choose.rs  mod.rs  play.rs
gamey/src/core/: action.rs  game.rs  movement.rs  player.rs
gamey/src/game_gateway/: game_gateway_client.rs  mod.rs
gamey/tests/: play_tests.rs
gateway/: Dockerfile  gateway-service.js  openapi.yaml  package-lock.json  package.json
gateway/__tests__/: gateway-service.test.js
users/: db.js  package-lock.json  package.json  schema.js  users-service.js  vitest.config.js
users/__tests__/: db.test.js  users-service.test.js
webapp/: Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
webapp/src/: App.css  App.tsx  GameBoard.css  GameBoard.tsx  GameHistory.css  GameHistory.tsx  GameMenu.css  GameMenu.tsx  LanguageSwitcher.tsx  SignupForm.css  (+4 more)
(+26 files in other folders)
