[package]
name = "gamey"
version = "0.1.0"
edition = "2024"
description = "A Rust implementation of a game engine"
authors = [
    "Jose Emilio Labra Gayo",
    "Pablo González González",
    "Diego Martín Fernández",
    "Celia Melendi Lavandera"
]
license = "MIT"
readme = "./README.md"
keywords = ["game", "engine"]
categories = ["games"]

[[bin]]
path = "src/main.rs"
name = "gamey"

[lib]
name = "gamey"
path = "src/lib.rs"


[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.6.0", features = ["derive"] }
rand = "0.10.0"
rustyline = { version = "17.0", features = ["with-file-history"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149" 
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.13.2", features = ["json"] }


[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1"
mime = "0.3"
tempfile = "3.27.0"
proptest = "1.10.0"
criterion = { version = "0.8.2", features = ["html_reports"] }
mockito = "1.2"

[[bench]]
name = "gamey_benchmarks"
harness = false
